Gradle root added

--- a/com.lunifera.graduate.server/build.properties
+++ b/com.lunifera.graduate.server/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/com.lunifera.graduate.bootstrap.DatasourceComponent.xml
+               OSGI-INF/com.lunifera.graduate.bootstrap.DatasourceComponent.xml,\
+               OSGI-INF/
