--- a/com.lunifera.graduate.ui.application.custom/build.properties
+++ b/com.lunifera.graduate.ui.application.custom/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/com.lunifera.graduate.ui.application.custom.grid.StudentGridEnhancer.xml,\
-               OSGI-INF/com.lunifera.graduate.ui.application.custom.info.StudentInfoContentProvider.xml
+               OSGI-INF/com.lunifera.graduate.ui.application.custom.info.StudentInfoContentProvider.xml,\
+               OSGI-INF/
