--- a/com.lunifera.graduate.entities/build.properties
+++ b/com.lunifera.graduate.entities/build.properties
@@ -1,4 +1,6 @@
-source.. = src/
+source.. = src-gen/,\
+           src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               OSGI-INF/
