Set up product deployment

--- a/releng/com.lunifera.graduate.product/pom.xml
+++ b/releng/com.lunifera.graduate.product/pom.xml
@@ -14,9 +14,76 @@
 	<name>Lunifera Graduate Product</name>
 	<description>Product for Lunifera Graduate</description>
 	
+	<properties>
+		<product.download.location>/lunifera/downloads/vaaclipse/product/</product.download.location>
+	</properties>
+
 	<build>
 		<plugins>
-			
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<configuration>
+					<filters>
+						<filter>
+							<type>eclipse-plugin</type>
+							<id>org.eclipse.emf.mwe2.launch</id>
+							<removeAll />
+						</filter>
+						<filter>
+							<type>eclipse-plugin</type>
+							<id>org.eclipse.ui</id>
+							<removeAll />
+						</filter>
+						<filter>
+							<type>eclipse-plugin</type>
+							<id>org.eclipse.e4.core.services</id>
+							<restrictTo>
+								<versionRange>[1.2.0,2.0.0)</versionRange>
+							</restrictTo>
+						</filter>
+					</filters>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-director-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>materialize-products</id>
+						<goals>
+							<goal>materialize-products</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>archive-products</id>
+						<goals>
+							<goal>archive-products</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>deploy</phase>
+						<configuration>
+							<quiet>true</quiet>
+							<target>
+								<ant antfile="publish-product.xml" target="main" dir=".">
+									<property name="product.targetFolder" value="${product.download.location}" />
+								</ant>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+
 </project>
