--- a/releng/com.lunifera.graduate.feature/feature.properties
+++ b/releng/com.lunifera.graduate.feature/feature.properties
@@ -15,13 +15,13 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName =Lunifera Demo CarStore feature (DO NOT INSTALL!)
+featureName =Lunifera Demo Graduation Admin feature (DO NOT INSTALL!)
 
 # "providerName" property - name of the company that provides the feature
 providerName=Lunifera GmbH
 
 # "description" property - description of the feature
-description=This feature provides the bundles for for the demo CarStore.
+description=This feature provides the bundles for for the demo Graduation Admin.
 
 # "updateSiteName" property - label for the update site
 updateSiteName=
