--- a/com.lunifera.graduate.ui.application.custom/build.properties
+++ b/com.lunifera.graduate.ui.application.custom/build.properties
@@ -1,5 +1,5 @@
 source.. = src/
-output.. = bin/
+output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/com.lunifera.graduate.ui.application.custom.grid.StudentGridEnhancer.xml,\
