--- a/com.lunifera.graduate.ui.application/plugin.xml
+++ b/com.lunifera.graduate.ui.application/plugin.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
- <extension
-         id="com.lunifera.graduate.ui.application"
-         point="org.eclipse.e4.workbench.model">
-      <fragment
-            apply="notexists"
-            uri="fragment.e4xmi">
-      </fragment>
-   </extension>
    <extension
          id="GraduateProduct"
          point="org.eclipse.core.runtime.products">
@@ -20,7 +12,7 @@
          </property>
          <property
                name="applicationWidgetset"
-               value="platform:/plugin/org.lunifera.samples.carstore.widgetset/VAADIN/widgetsets/org.lunifera.samples.carstore.widgetset.CarstoreWidgetset">
+               value="platform:/plugin/com.lunifera.graduate.widgetset/resources/com.lunifera.graduate.widgetset.GraduateWidgetset">
          </property>
          <property
                name="preferenceCustomization"
