--- a/com.lunifera.graduate.widgetset/pom.xml
+++ b/com.lunifera.graduate.widgetset/pom.xml
@@ -92,6 +92,11 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.vaadin.addon</groupId>
+			<artifactId>vaadin-charts</artifactId>
+			<version>3.0.0-alpha9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
