--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--#======================================================================= -->
-<!--# Copyright (c) 2012, 2013 Committers of lunifera.org - Lunifera.org. -->
-<!--# All rights reserved. This program and the accompanying materials -->
-<!--# are made available under the terms of the Eclipse Public License v1.0 -->
-<!--# which accompanies this distribution, and is available at -->
-<!--# http://www.eclipse.org/legal/epl-v10.html -->
+<!--# Copyright (c) 2015-2016 Committers of lunifera.org - Lunifera.org. -->
+<!--# All rights reserved. -->
 <!--# -->
 <!--# Contributors: -->
 <!--# Klemens Edler - initial API and implementation -->
